--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-form-validator-core",
-  "version": "0.6.1",
+  "version": "0.7.1",
   "description": "Core validator component for react forms.",
   "main": "./lib/index.js",
   "scripts": {
@@ -13,7 +13,7 @@
     "form",
     "validation"
   ],
-  "author": "vivek",
+  "author": "vivek anand",
   "license": "MIT",
   "peerDependencies": {
     "react": "^15.0.0 || ^16.0.0",
